backend-service/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: backend-strip-prefix
  namespace: devver-backend-service
spec:
  stripPrefix:
    prefixes:
      - /api
