backend-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devver-backend-service
  labels:
    kasten-backup-prod-ns: "true"
