backend-service/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-service-ingress
  namespace: devver-backend-service
  annotations:
    external-dns.alpha.kubernetes.io/target: reverse-proxy.vrhometech.fr
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: app.devver.app
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
  tls:
    - hosts:
        - app.devver.app
      secretName: backend-service-tls
---
